SERVER-89181 Remove I/O from system.views DDL precommit

This patch backports views-related changes from SERVER-76839.

GitOrigin-RevId: bb219a31b13de7da80b0530f246af03522dae80d